# gtksnippets

./: AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.am.bak  Makefile.in  NEWS  TODO  aclocal.m4  autogen.sh  config.h  config.status  configure  configure.ac  configure.ac.bak  configure.in  gsnippets-1.0.pc.in  gtksnippets-1.0.pc.in  gtksnippets.dev  libtool
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
chuchisnippets/: Makefile  Makefile.am  Makefile.in  chuchisnippets.gedit-plugin
data/: Makefile.am  gtksnippets-vars.glade  gtksnippets.glade
debian/: changelog  control  files  libgtksnippets1.0-0.install  rules  rules.normal
docs/reference/libgtksnippets/: Makefile  Makefile.am  Makefile.in  libgtksnippets-decl-list.txt  libgtksnippets-decl.txt  libgtksnippets-docs.sgml  libgtksnippets-sections.txt  libgtksnippets-undocumented.txt  libgtksnippets-unused.txt
docs/reference/libgtksnippets/html/: ch01.html  index.html  index.sgml  libgtksnippets-GtkSnippet.html  libgtksnippets-GtkSnippetsLoader.html  libgtksnippets-GtkSnippetsManager.html  libgtksnippets-GtkSnippetsPopupDialog.html  libgtksnippets-gtk-snippets-gsv-utils.html  libgtksnippets.devhelp  libgtksnippets.devhelp2
docs/reference/libgtksnippets/tmpl/: gtk-snippet.sgml  gtk-snippets-gsv-utils.sgml  gtk-snippets-loader.sgml  gtk-snippets-manager.sgml  gtk-snippets-popup-dialog.sgml  libgtksnippets-unused.sgml
docs/reference/libgtksnippets/xml/: gtk-snippet.xml  gtk-snippets-gsv-utils.xml  gtk-snippets-loader.xml  gtk-snippets-manager.xml  gtk-snippets-popup-dialog.xml  libgtksnippets-doc.bottom
gedit/chuchisnippets/: chuchisnippets-plugin.c  chuchisnippets-plugin.h  chuchisnippets.gedit-plugin.desktop.in
gedit/gtc/: Makefile.am  gtc-configuration.glade.bak  gtc-configuration.gladep.bak  gtc-plugin.c  gtc.gedit-plugin
gsnippets/: Makefile.am  gsnippets-common.c  gsnippets-common.h  gsnippets-db.c  gsnippets-db.h  gsnippets-func-manager.c  gsnippets-func-manager.h  gsnippets-item.c  gsnippets-item.h  gsnippets-parser.c  gsnippets-parser.h  gsnippets-variable.c  gsnippets-variable.h
gsnippets/data/: complete.sql  default_data.sql  selects.sql
gtc/: Makefile  Makefile.in  gtc-plugin.c  gtc-plugin.h  gtc.gedit-plugin.desktop.in
gtc/.deps/: gtc-plugin.Plo
gtc/.libs/: libgtc.lai
gtksnippets/: Makefile.am  gtksnippets-dialog.c  gtksnippets-dialog.h  gtksnippets-gtv-var.c  gtksnippets-gtv-var.h  gtksnippets-inplaceparser.c  gtksnippets-inplaceparser.h  gtksnippets-variable.c  gtksnippets-variable.h  gtksnippets-varsdialog.c  gtksnippets-varsdialog.h
libgtksnippets/: Makefile  Makefile.am  Makefile.am.bak  Makefile.in  gtc-provider-test.c  gtc-provider-test.h  gtc-provider-test.vala  gtc-snippets-provider.c  gtc-snippets-provider.h  gtk-snippet-source-view-listener.c  gtk-snippet-source-view-listener.h  gtk-snippet-source-view-listener.lo  gtk-snippet.c  gtk-snippet.h  gtk-snippet.lo  gtk-snippets-editor-gsv.c  gtk-snippets-editor-gsv.h  gtk-snippets-editor.c  gtk-snippets-editor.h  gtk-snippets-gsv-utils.c  gtk-snippets-gsv-utils.h  gtk-snippets-loader.c  gtk-snippets-loader.h  gtk-snippets-loader.lo  gtk-snippets-management-ui.c  gtk-snippets-management-ui.glade  gtk-snippets-management-ui.h  gtk-snippets-manager-gsv.c  gtk-snippets-manager-gsv.h  gtk-snippets-manager.c  gtk-snippets-manager.h  gtk-snippets-manager.lo  gtk-snippets-popup-dialog.c  gtk-snippets-popup-dialog.glade  gtk-snippets-popup-dialog.h  gtk-text-completion-data.c  gtk-text-completion-data.gob  gtk-text-completion-data.h  gtk-text-completion-popup.c  gtk-text-completion-popup.glade  (+9 more)
libgtksnippets/.deps/: gtk-snippet-source-view-listener.Plo  gtk-snippet.Plo  gtk-snippets-loader.Plo
libgtksnippets/.libs/: libgtksnippets.lai  libgtksnippets.so.1.0.0
libgtksnippets/tools/plugin_template/: provider-template.c  provider-template.h
openldev/snippets/: Makefile  Makefile.am  Makefile.in  snippets.cc  snippets.h  snippets.plugin
openldev/snippets/.deps/: snippets.Plo
openldev/snippets/.libs/: libsnippets.lai  libsnippets.soT
po/: Makefile  Makefile.in  POTFILES  POTFILES.in  es.po
src/: Makefile  Makefile.am  Makefile.in  callbacks.c  callbacks.h  gtksnippets  gtksnippets-manager.c  gtksnippets-manager.h  gtksnippets.glade  main.c
src/.deps/: callbacks.Po  main.Po
src/.libs/: gtksnippets  lt-gtksnippets
test/: Makefile.am  main.c  vars-test.c
