AC_INIT(src/main.c)

PACKAGE_NAME=gtksnippets
PACKAGE_VERSION=0.1.0

AM_INIT_AUTOMAKE($PACKAGE_NAME, $PACKAGE_VERSION)
AM_CONFIG_HEADER(config.h)
AM_MAINTAINER_MODE

AC_PROG_CC

############ LIBTOOL ##############
AC_PROG_LIBTOOL
###################################


############ gtk doc ##############
GTK_DOC_CHECK(1.8)
###################################

############ Testing conditionals ##############
PKG_CHECK_MODULES(GTKSOURCECOMPLETION,[gtksourcecompletion-1.0 >= 0.5.0],have_comple=true,have_comple=false)
################################################

PKG_CHECK_MODULES(GTKSNIPPETS, [
gtk+-2.0
libglade-2.0
sqlite3 >= 3.0
gtksourceview-2.0
])

AC_SUBST(GTKSNIPPETS_CFLAGS)
AC_SUBST(GTKSNIPPETS_LIBS)

echo "
	GtkSourceCompletion: $have_comple
"
if test "x$have_comple" = "xyes"; then
        echo ""
fi

AC_OUTPUT([
Makefile
gsnippets/Makefile
gtksnippets/Makefile
src/Makefile
data/Makefile
gtksnippets-1.0.pc
])
